Add route to get videos by user UUID
