# src/swagger.json
@@ -2,7 +2,7 @@
   "openapi": "3.0.0",
   "info": {
     "description": "Swagger Youcube",
-    "version": "0.1.2",
+    "version": "0.1.3",
     "title": "Youcube",
     "contact": {
       "name": "UUBoys"
@@ -40,9 +40,7 @@
         "summary": "Register a new user",
         "description": "Tato cesta registruje nové uživatele\n",
         "operationId": "authregister",
-        "tags": [
-          "Authorization"
-        ],
+        "tags": ["Authorization"],
         "requestBody": {
           "required": true,
           "content": {
@@ -92,9 +90,7 @@
     "/auth/login": {
       "post": {
         "summary": "Login user",
-        "tags": [
-          "Authorization"
-        ],
+        "tags": ["Authorization"],
         "requestBody": {
           "required": true,
           "content": {
@@ -144,9 +140,7 @@
     "/users/{uuid}": {
       "get": {
         "summary": "Get user by UUID",
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "parameters": [
           {
             "in": "path",
@@ -201,9 +195,7 @@
     "/users/update": {
       "post": {
         "summary": "Update logged in user",
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "security": [
           {
             "BearerAuth": []
@@ -261,9 +253,7 @@
     "/videos": {
       "get": {
         "summary": "Get all videos",
-        "tags": [
-          "Videos"
-        ],
+        "tags": ["Videos"],
         "responses": {
           "200": {
             "description": "Returns videos",
@@ -315,12 +305,75 @@
         }
       }
     },
+    "/videos/user/{uuid}": {
+      "get": {
+        "summary": "Get videos by USER-UUID",
+        "tags": ["Videos"],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "uuid",
+            "schema": {
+              "type": "string"
+            },
+            "required": true,
+            "description": "UUID of user"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Returns videos by user UUID",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "properties": {
+                      "uuid": {
+                        "type": "string"
+                      },
+                      "title": {
+                        "type": "string"
+                      },
+                      "url": {
+                        "type": "string"
+                      },
+                      "description": {
+                        "type": "string"
+                      },
+                      "monetized": {
+                        "type": "boolean"
+                      },
+                      "created": {
+                        "type": "string"
+                      },
+                      "tag": {
+                        "type": "integer"
+                      },
+                      "users": {
+                        "type": "object",
+                        "properties": {
+                          "uuid": {
+                            "type": "string"
+                          },
+                          "name": {
+                            "type": "string"
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/videos/{uuid}": {
       "get": {
         "summary": "Get video by UUID",
-        "tags": [
-          "Videos"
-        ],
+        "tags": ["Videos"],
         "parameters": [
           {
             "in": "path",
@@ -389,9 +442,7 @@
             "BearerAuth": []
           }
         ],
-        "tags": [
-          "Videos"
-        ],
+        "tags": ["Videos"],
         "parameters": [
           {
             "in": "path",
@@ -465,9 +516,7 @@
       },
       "delete": {
         "summary": "Delete video by UUID",
-        "tags": [
-          "Videos"
-        ],
+        "tags": ["Videos"],
         "security": [
           {
             "BearerAuth": []
@@ -497,9 +546,7 @@
     "/videos/create": {
       "post": {
         "summary": "Create a video",
-        "tags": [
-          "Videos"
-        ],
+        "tags": ["Videos"],
         "security": [
           {
             "BearerAuth": []
@@ -558,9 +605,7 @@
     "/videos/{uuid}/comments": {
       "get": {
         "summary": "Get video comments",
-        "tags": [
-          "Videos"
-        ],
+        "tags": ["Videos"],
         "parameters": [
           {
             "in": "path",
@@ -648,9 +693,7 @@
     "/comment/create": {
       "post": {
         "summary": "Create comment",
-        "tags": [
-          "Comments"
-        ],
+        "tags": ["Comments"],
         "security": [
           {
             "BearerAuth": []
@@ -704,9 +747,7 @@
     "/comment/{uuid}/update": {
       "post": {
         "summary": "Update Comment",
-        "tags": [
-          "Comments"
-        ],
+        "tags": ["Comments"],
         "security": [
           {
             "BearerAuth": []
@@ -764,9 +805,7 @@
     "/comment/{uuid}/delete": {
       "delete": {
         "summary": "Delete comment",
-        "tags": [
-          "Comments"
-        ],
+        "tags": ["Comments"],
         "security": [
           {
             "BearerAuth": []
@@ -796,9 +835,7 @@
     "/playlists/create": {
       "post": {
         "summary": "Create a playlist",
-        "tags": [
-          "Playlists"
-        ],
+        "tags": ["Playlists"],
         "security": [
           {
             "BearerAuth": []
@@ -834,9 +871,7 @@
     "/playlists/user/{uuid}": {
       "get": {
         "summary": "Get playlist by USER-UUID",
-        "tags": [
-          "Playlists"
-        ],
+        "tags": ["Playlists"],
         "parameters": [
           {
             "in": "path",
@@ -868,9 +903,7 @@
     "/playlists/{uuid}": {
       "get": {
         "summary": "Get playlist by UUID",
-        "tags": [
-          "Playlists"
-        ],
+        "tags": ["Playlists"],
         "parameters": [
           {
             "in": "path",
@@ -900,9 +933,7 @@
       },
       "post": {
         "summary": "Edit a playlist",
-        "tags": [
-          "Playlists"
-        ],
+        "tags": ["Playlists"],
         "security": [
           {
             "BearerAuth": []
@@ -947,9 +978,7 @@
       },
       "delete": {
         "summary": "Delete a playlist",
-        "tags": [
-          "Playlists"
-        ],
+        "tags": ["Playlists"],
         "security": [
           {
             "BearerAuth": []
@@ -979,9 +1008,7 @@
     "/playlists/{uuid}/add": {
       "post": {
         "summary": "Add videos to playlist",
-        "tags": [
-          "Playlists"
-        ],
+        "tags": ["Playlists"],
         "security": [
           {
             "BearerAuth": []
@@ -1028,9 +1055,7 @@
     "/playlists/{uuid}/remove": {
       "post": {
         "summary": "Remove videos to playlist",
-        "tags": [
-          "Playlists"
-        ],
+        "tags": ["Playlists"],
         "security": [
           {
             "BearerAuth": []
@@ -1077,9 +1102,7 @@
     "/tags": {
       "get": {
         "summary": "Get all tags",
-        "tags": [
-          "Tags"
-        ],
+        "tags": ["Tags"],
         "responses": {
           "200": {
             "description": "Returns all tags",
@@ -1158,11 +1181,7 @@
       },
       "UserRegister": {
         "type": "object",
-        "required": [
-          "email",
-          "name",
-          "password"
-        ],
+        "required": ["email", "name", "password"],
         "properties": {
           "email": {
             "type": "string",
@@ -1180,10 +1199,7 @@
       },
       "UserLogin": {
         "type": "object",
-        "required": [
-          "email",
-          "password"
-        ],
+        "required": ["email", "password"],
         "properties": {
           "email": {
             "type": "string",
@@ -1215,10 +1231,7 @@
       },
       "CommentCreate": {
         "type": "object",
-        "required": [
-          "video_uuid",
-          "messsage"
-        ],
+        "required": ["video_uuid", "messsage"],
         "properties": {
           "parent_uuid": {
             "type": "string",
@@ -1236,9 +1249,7 @@
       },
       "CommentUpdate": {
         "type": "object",
-        "required": [
-          "message"
-        ],
+        "required": ["message"],
         "properties": {
           "message": {
             "type": "string",
@@ -1264,7 +1275,18 @@
           "playlist_videos": {
             "type": "array",
             "items": {
-              "$ref": "#/components/schemas/Video"
+              "type": "object",
+              "properties": {
+                "id": {
+                  "type": "number"
+                },
+                "playlist_uuid": {
+                  "type": "string"
+                },
+                "video_uuid": {
+                  "type": "string"
+                }
+              }
             }
           }
         }
@@ -1285,9 +1307,7 @@
       },
       "CreatePlaylist": {
         "type": "object",
-        "required": [
-          "title"
-        ],
+        "required": ["title"],
         "properties": {
           "title": {
             "type": "string",
@@ -1301,10 +1321,7 @@
       },
       "AddVideoToPlaylist": {
         "type": "object",
-        "required": [
-          "video_uuids",
-          "playlist_uuid"
-        ],
+        "required": ["video_uuids", "playlist_uuid"],
         "properties": {
           "video_uuids": {
             "type": "array",
@@ -1316,13 +1333,7 @@
       },
       "VideoCreate": {
         "type": "object",
-        "required": [
-          "title",
-          "description",
-          "url",
-          "monetized",
-          "tag"
-        ],
+        "required": ["title", "description", "url", "monetized", "tag"],
         "properties": {
           "title": {
             "type": "string",
